--- a/drivers/net/wireless/bcm4329/Makefile
+++ b/drivers/net/wireless/bcm4329/Makefile
@@ -36,14 +36,16 @@ ifeq ($(CONFIG_BCM4329_CSCAN_ENABLE),y)
 DHDCFLAGS += -DCSCAN -DPNO_SUPPORT
 endif
 
-ifeq ($(TARGET_USE_NEW_TOOLCHAIN),1)
+### Enable these flags no matter what since compile is acting as if
+### they are being ignored.
+### ifeq ($(TARGET_USE_NEW_TOOLCHAIN),1)
   # gcc-4.6.1 warns a lot more than previous compilers.
   # The following is the minimal set of warnings that need to not error out
   # the build for it to succeed. -Wno-error would also work, but this
   # explicit list allows them to be fixed in smaller chunks.
   DHDCFLAGS += -Wno-error=unused-but-set-variable
   DHDCFLAGS += -Wno-error=array-bounds
-endif
+### endif
 
 DHDOFILES = dhd_linux.o linux_osl.o bcmutils.o dhd_common.o dhd_custom_gpio.o \
 	wl_iw.o siutils.o sbutils.o aiutils.o hndpmu.o bcmwifi.o dhd_sdio.o   \
