--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,47 @@ scripts/kconfig/conf
 scripts/kconfig/lex.zconf.c
 scripts/kconfig/zconf.hash.c
 scripts/kconfig/zconf.tab.c
+
+### Created by: make
+.missing-syscalls.d
+.tmp_System.map
+.tmp_kallsyms1.S
+.tmp_kallsyms2.S
+.tmp_versions/
+.tmp_vmlinux1
+.tmp_vmlinux2
+.version
+Module.symvers
+System.map
+arch/arm/boot/Image
+arch/arm/boot/compressed/lib1funcs.S
+arch/arm/boot/compressed/piggy.lzma
+arch/arm/boot/compressed/vmlinux
+arch/arm/boot/compressed/vmlinux.lds
+arch/arm/boot/zImage
+arch/arm/kernel/asm-offsets.s
+arch/arm/kernel/vmlinux.lds
+arch/arm/lib/lib.a
+drivers/net/wireless/bcm4329/bcm4329.ko
+drivers/net/wireless/bcm4329/bcm4329.mod.c
+drivers/scsi/scsi_wait_scan.ko
+drivers/scsi/scsi_wait_scan.mod.c
+include/config/
+include/generated/
+include/linux/version.h
+kernel/bounds.s
+kernel/config_data.gz
+kernel/config_data.h
+kernel/timeconst.h
+lib/crc32table.h
+lib/gen_crc32table
+lib/lib.a
+scripts/bin2c
+scripts/kallsyms
+scripts/mod/elfconfig.h
+scripts/mod/mk_elfconfig
+scripts/mod/modpost
+usr/.initramfs_data.cpio.d
+usr/gen_init_cpio
+usr/initramfs_data.cpio
+vmlinux
